[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/timed_door.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 13 )

[node name="StaticBody2D" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.46154, 0, 0, 2.46154, 1.90735e-06, 1.90735e-06 )
shapes/0/trigger = false
collision/layers = 0
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 1.90735e-06, 1.90735e-06 )
transform/scale = Vector2( 2.46154, 2.46154 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer_open" type="Timer" parent="."]

process_mode = 1
wait_time = 4.0
one_shot = false
autostart = false

[node name="Timer_closed" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="timeout" from="Timer_open" to="." method="_on_Timer_open_timeout"]

[connection signal="timeout" from="Timer_closed" to="." method="_on_Timer_closed_timeout"]


